# maakie-brainlab

./: +PPLAN+  +PTASK+  .cspell.json  .env.example  .gitignore  .golangci.yml  .markdownlint-cli2.jsonc  AGENTS.md  AGENTS.override.md  IL_PIVOT_PRODUCT.md  Makefile  PRODUCT.md  README.md  README_EN.md  SECURITY.md  SPEC.md  cspell.json  docker-compose.yml  flake.nix  go.mod  go.sum  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: pull_request_template.md
docs/: X_PLAN.md  X_TASK.md
eval/: questions.jsonl  run_eval.py  run_eval.py.bak
infra/: llama-server.env  llama-server.env.bak  llama-server.start.sh  llama-server.status.sh  llama-server.stop.sh  run-llama-server.sh
ops/: VERIFY_EVIDENCE.sh  chaos_simulator.sh  check_no_file_url.sh  diff_pack.sh  evidence_retention.json  finalize_clean.sh  fix_pr98_milestone.sh  gate1.sh  il_entrypoint_guard.py  new_ops_phase.sh  phase_ship.py  pr_create.sh  pr_merge_guard.sh  required_checks_sot.py  required_checks_sot.sh  review_pack.sh  reviewpack_policy.toml  ruleset_required_status_checks.json  run_always_1h.sh  s22_16_ship.py  s5_pack.sh  s5_verify_pack.sh  s6_verify_pack.sh  seed_eval_results.sh  smoke_evidencepack.sh  verify_pack.sh
prompts/: rag.md  system.md
scripts/: eval_wall_v2_il_centered.py  eval_wall_v2_postprocess_cases.py  gemma_lab_bridge.py  il_check.py  il_compile.py  il_compile_bench.py  il_compile_bench_diff.py  il_compile_entry_smoke.py  il_compile_prompt_loop.py  il_doctor.py  il_entry.py  il_entry_smoke.py  il_exec.py  il_exec_run.py  il_exec_selftest.py  il_fmt.py  il_guard.py  (+17 more)
(+888 files in other folders)
