[project]
name = "maakie-brainlab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.3.4",
    "llama-index>=0.14.13",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-openai>=0.6.15",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.3.1",
    "feedparser==6.0.12",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
